# directorio_aprendices_csv

./: README.md  directorio_aprendices_csv.py  pyproject.toml
test/: test_directorio_aprendices_csv.py
