[project]
name = "directorio-aprendices-csv"
version = "0.1.0"
description = "Proyecto de directorio de aprendices usando CSV y pandas"
authors = [
    { name = "Andres Gonzalez", email = "andresfelipegonzalez5a@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]
